--- a/MOHEswatini/MOHEswatini.csproj
+++ b/MOHEswatini/MOHEswatini.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.250" />
+    <PackageReference Include="MailKit" Version="2.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="WebMarkupMin.AspNetCore2" Version="2.8.3" />
+    <PackageReference Include="WebMarkupMin.Core" Version="2.8.3" />
+  </ItemGroup>
+
 </Project>
