--- a/MOHEswatini/appsettings.json
+++ b/MOHEswatini/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MOHEswatiniDBConnection": "Server=198.38.83.200;Database=arnikain_arnikainfotech;user id=arnikain_dhananayp;password=Dj$19112018"
+    //"MOHEswatiniDBConnection": "Server=198.38.83.200;Database=arnikain_arnikainfotech;user id=arnikain_dhananayp;password=Dj$19112018"
+    "MOHEswatiniDBConnection": "Server=aditya;Database=arnikain_MOHEswatini;user id=sa;password=happy2007"
   },
   "Logging": {
     "LogLevel": {
