--- a/MOHEswatini/appsettings.json
+++ b/MOHEswatini/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    //"MOHEswatiniDBConnection": "Server=198.38.83.200;Database=arnikain_arnikainfotech;user id=arnikain_dhananayp;password=Dj$19112018"
+    "MOHEswatiniDBConnection": "Server=198.38.83.200;Database=arnikain_moheswatini;user id=arnikain_dhananayp;password=Dj$19112018"
     //"MOHEswatiniDBConnection": "Server=aditya;Database=arnikain_MOHEswatini;user id=sa;password=happy2007",
-    "MOHEswatiniDBConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Database=arnikain_MOHEswatini"
+    //"MOHEswatiniDBConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Database=arnikain_MOHEswatini"
   },
   "Logging": {
     "LogLevel": {
