--- a/MOHEswatini/MOHEswatini.csproj
+++ b/MOHEswatini/MOHEswatini.csproj
@@ -22,12 +22,14 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="3.1.3" />
+    <PackageReference Include="Rotativa.AspNetCore" Version="1.2.0-beta" />
     <PackageReference Include="WebMarkupMin.AspNetCore2" Version="2.8.3" />
     <PackageReference Include="WebMarkupMin.Core" Version="2.8.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Documents\" />
+    <Folder Include="wwwroot\Rotativa\" />
   </ItemGroup>
 
 </Project>
